# diploma

./: .gitignore  CMakeLists.txt  Untitled.ipynb  result.txt
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
algos/: CMakeLists.txt  adag_selection.cpp  adag_selection.h  build_gadag_tree.cpp  build_gadag_tree.h  dfs_gadag_redundant_trees.cpp  dfs_gadag_redundant_trees.h  dfs_redundant_trees.cpp  dfs_redundant_trees.h  dfs_tree_selector.cpp  dfs_tree_selector.h  dfs_two_connected.cpp  dfs_two_connected.h  gadag_redundant_trees.cpp  gadag_redundant_trees.h
base_algo/: CMakeLists.txt  contains.cpp  contains.h  dfs.cpp  dfs.h  distance.cpp  distance.h  intersect.cpp  intersect.h  is_connected.cpp  is_connected.h  is_dag.cpp  is_dag.h  is_nested.cpp  is_nested.h  is_rooted_tree.cpp  is_rooted_tree.h  is_two_connected.cpp  is_two_connected.h  is_undirected.cpp  is_undirected.h  join.cpp  join.h  make_undirected.cpp  make_undirected.h  subtract.cpp  subtract.h  test_connectivity.cpp  test_connectivity.h  without.cpp  without.h
baseline/: CMakeLists.txt  adag_selection.cpp  adag_selection.h  dfs_gadag_redundant_trees.cpp  dfs_gadag_redundant_trees.h  dfs_redundant_trees.cpp  dfs_redundant_trees.h  gadag_redundant_trees.cpp  gadag_redundant_trees.h
cmake/: clang.profile  conan.cmake  conanfile.txt
dot/: CMakeLists.txt  dot_serializer.cpp  dot_serializer.h
generator/: CMakeLists.txt  full_graph_generator.cpp  full_graph_generator.h  generator.h  random_generator.h  random_graph_generator.cpp  random_graph_generator.h
generators/: CMakeLists.txt  generator_cli.cpp
graph/: CMakeLists.txt  builder.cpp  builder.h  edge.cpp  edge.h  graph.cpp  graph.h  graph_serializer.cpp  graph_serializer.h  vertex.cpp  vertex.h
junk/: CMakeLists.txt
junk/adag/: CMakeLists.txt  adag.cpp
junk/algos_more/: CMakeLists.txt  algos_more_dfs.cpp
junk/algos_one/: CMakeLists.txt  algos_one_dfs.cpp
junk/algos_three/: CMakeLists.txt  algos_three.cpp
junk/algos_two/: CMakeLists.txt  algos_two.cpp  algos_two_dfs.cpp  algos_two_gadag.cpp
junk/baseline_three/: CMakeLists.txt  baseline_three.cpp
junk/baseline_two/: CMakeLists.txt  baseline_two.cpp
junk/dfs/: CMakeLists.txt  dfs.cpp
junk/dot/: CMakeLists.txt  dot.cpp
presentation/: render.py
presentation/slide12/: graph.dot
presentation/slide16/: graph.dot
presentation/slide17/: graph.dot
presentation/slide18/: graph.dot
presentation/slide19/: graph.dot
presentation/slide2/: init.dot  path1.dot  path2.dot
presentation/slide20/: graph.dot
presentation/slide3/: path1.dot  path2.dot
presentation/slide5/: gadag.dot  init.dot
presentation/slide7/: init.dot
scripts/: build.py  common.py  generate_tests.py  root.py  run_tests.py  run_tests_dfs.py  run_tests_gadag.py
test/: test_two_trees.cpp
util/: CMakeLists.txt  argparse.cpp  argparse.h  assert.h  expect.h  log.h  signal_handler.cpp  signal_handler.h  stacktrace.cpp  stacktrace.h
